# insightviewer

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  OldDockerfile  README.md  backups_instructions.md  build.xml  config.ini  docker-compose.dev.yml  docker-compose.yml  index.html  olddocker-compose.yml  prehod_statika.md  requirements.err  requirements.txt  test_openai_key.py  wget-log  wget-log.1  wget-log.2
source/InsightViewer/: Dockerfile  Dockerfile.quiz  THIRD_PARTY_NOTICES.md  config.example.ini  config.ini  config.py  index.html  package.json  pyproject.toml  requirements.txt  test_quiz_api.py
source/InsightViewer/app/: app.py
source/InsightViewer/app/ai/: __init__.py  config.py  errors.py  registry.py  selection.py  types.py
source/InsightViewer/app/graph/: __init__.py  context.py
source/InsightViewer/app/models/: neo4jConnect.py
source/InsightViewer/app/rag/: ask_egipt.py  ask_egipt_oai.py  build_index.py  build_index_oai.py  inspect_chroma.py  inspect_collection_egipt.py  quiz_api.py  quiz_egipt_oai.py  quiz_vector.py
source/InsightViewer/app/routes/: ai_graph.py  createNodeTypes.py  extractFromPptx.py  global_search.py  insightViewer.code-workspace  meeting_graph.py  (+6 more)
source/InsightViewer/docs/: index.html  software_continuation_plan.md  vector_frontend_rollout_runbook.md  vector_upgrade_checklist.txt
source/InsightViewer/insight-viewer/: app.py  requirements.txt
source/InsightViewer/insightviewer.git/: config  packed-refs
source/InsightViewer/scripts/: smoke_retrieval_and_quiz.sh
source/InsightViewer/tests/: test_retrieval_contracts.py
(+192 files in other folders)
